k8s/dep-app-flask.yaml
# flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      app.kubernetes.io/name: flask-app
  template:
    metadata:
      labels:
        app: flask-app
        app.kubernetes.io/name: flask-app
    spec:
      containers:
      - name: flask-app
        image: cjcuesta/python-app:latest
        ports:
        - name: http
          containerPort: 8181
          protocol: TCP
        - name: metrics
          containerPort: 8000
          protocol: TCP  
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
