k8s/flask-app-service.yaml
# flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - port: 8181
    targetPort: 8181
    nodePort: 30001
