k8s/svc-app-flask.yaml
# flask-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-flask
spec:
  type: NodePort
  selector:
    app: flask-app
  ports:
  - port: 8181
    targetPort: 8181
    nodePort: 30001
