k8s/svc-clusterip-flask.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-flask
spec:
  selector:
    app: flask-app
  ports:
  - port: 8181
    protocol: TCP
    targetPort: 8181
