k8s/svc-db-mysql.yaml
# mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-db-mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
