k8s/svc-load-app-flask.yaml
# Servicio para exponer la app
apiVersion: v1
kind: Service
metadata:
  name: flask-app
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
  - port: 8181
    targetPort: http
    protocol: TCP
    name: http
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: metrics
