k8s/ing-app-flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-flask
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-app-flask
            port:
              number: 8181
